# hippo

./: .gitignore  Cargo.toml  LICENSE  README.md
lib/macro/: Cargo.toml
lib/macro/src/: codegen.rs  lib.rs  meta.rs
lib/shared/: Cargo.toml
lib/shared/src/: configuration.rs  lib.rs  output_format.rs  preprocessed.rs  preprocessor.rs
src/: lib.rs
