#
# Hippo
# (C) 2021 Brave Monday
#

[package]
name    = "hippo-macro"
version = "0.2.1"
description = "A macro support library for Hippo."
authors = ["Fredrik Krantz <pfk@bravemonday.com>"]
edition = "2018"
license = "ISC"

[lib]
proc-macro = true

[dependencies]
hippo-shared = { version = "^0.1.0", path = "../shared" }

proc-macro2      = { version = "^1.0" }
proc-macro-error = { version = "^1.0" }

quote = { version = "^1.0" }
syn   = { version = "^1.0", features = ["extra-traits", "full"] }
